Enhance release workflow and package zip
Add manual workflow_dispatch and prerelease detection based on manifest version (rc/beta/alpha). Create a ZIP of the custom component for HACS and attach it to the GitHub release. Upgrade softprops/action-gh-release to v2 and pass dynamic prerelease and files. Enable zip_release in hacs.json and bump frontend package version to 1.0.0-rc.1.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esphome-designer-frontend",
-  "version": "0.9.0",
+  "version": "1.0.0-rc.1",
   "description": "Frontend for ESPHome Designer",
   "type": "module",
   "main": "index.html",
