--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - 'custom_components/esphome_designer/manifest.json'
+  workflow_dispatch:
 
 jobs:
   release:
@@ -20,14 +21,25 @@ jobs:
         run: |
           VERSION=$(jq -r .version custom_components/esphome_designer/manifest.json)
           echo "version=v$VERSION" >> $GITHUB_OUTPUT
+          if [[ $VERSION == *"rc"* || $VERSION == *"beta"* || $VERSION == *"alpha"* ]]; then
+            echo "prerelease=true" >> $GITHUB_OUTPUT
+          else
+            echo "prerelease=false" >> $GITHUB_OUTPUT
+          fi
+          
+      - name: Create Zip for HACS
+        run: |
+          cd custom_components
+          zip -r ../esphome_designer.zip esphome_designer
           
       - name: Create Release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.version.outputs.version }}
           name: ${{ steps.version.outputs.version }}
           body_path: release_notes.md
           draft: false
-          prerelease: false
+          prerelease: ${{ steps.version.outputs.prerelease == 'true' }}
+          files: esphome_designer.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
